<resources>
    <string name="a">Search</string>
    <string name="b">None</string>
    <string name="c">Early KitKat version set the wrong MSS value on TCP connections (#61948). Try to enable the mssfix option to workaround this bug.</string>
    <string name="d">Wrong MSS value for VPN connection</string>
    <string name="e">Multiple users report that the mobile connection/mobile data connection is frequently dropped while using the VPN app. The behaviour seems to affect only some mobile provider/device combination and so far no cause/workaround for the bug could be identified. </string>
    <string name="f">Random disconnects from mobile network</string>
    <string name="g">VPN apps may stop working when uninstalled and reinstalled again. For details see #80074</string>
    <string name="h">Reinstalling VPN apps</string>
    <string name="i">The configured client IP and the IPs in its network mask are not routed to the VPN. OpenVPN works around this bug by explicitly adding a route that corrosponds to the client IP and its netmask</string>
    <string name="j">Route to the configured IP address</string>
    <string name="k">Android supports only CIDR routes to the VPN. Since non-CIDR routes are almost never used, OpenVPN for Android will use a /32 for routes that are not CIDR and issue a warning.</string>
    <string name="l">Non CIDR Routes</string>
    <string name="m">Opening a tun device while another tun device is active, which is used for persist-tun support, crashes the VPNServices on the device. A reboot is required to make VPN work again. OpenVPN for Android tries to avoid reopening the tun device and if really needed first closes the current TUN before opening the new TUN device to avoid to crash. This may lead to a short window where packets are sent over the non-VPN connection. Even with this workaround the VPNServices sometimes crashes and requires a reboot of the device.</string>
    <string name="n">Persist tun mode</string>
    <string name="o">Android will keep using your proxy settings specified for the mobile/Wi-Fi connection when no DNS servers are set. OpenVPN for Android will warn you about this in the log.When a VPN sets a DNS server Android will not use a proxy. There is no API to set a proxy for a VPN connection.</string>
    <string name="p">Proxy behaviour for VPNs</string>
    <string name="q">VPN does not work at all for secondary users.</string>
    <string name="r">Secondary tablet users</string>
    <string name="s">Tethering works while the VPN is active. The tethered connection will NOT use the VPN.</string>
    <string name="t">Only destination can be reached over the VPN that are reachable without VPN. IPv6 VPNs does not work at all.</string>
    <string name="u">Remote networks not reachable</string>
    <string name="v">Navigate home</string>
    <string name="w">Navigate up</string>
    <string name="x">More options</string>
    <string name="y">Done</string>
    <string name="z">See all</string>
    <string name="a0">Choose an app</string>
    <string name="a1">OFF</string>
    <string name="a2">ON</string>
    <string name="a3">Alt+</string>
    <string name="a4">Ctrl+</string>
    <string name="a5">delete</string>
    <string name="a6">enter</string>
    <string name="a7">Function+</string>
    <string name="a8">Meta+</string>
    <string name="a9">Shift+</string>
    <string name="a_">space</string>
    <string name="aa">Sym+</string>
    <string name="ab">Menu+</string>
    <string name="ac">Search…</string>
    <string name="ad">Clear query</string>
    <string name="ae">Search query</string>
    <string name="af">Search</string>
    <string name="ag">Submit query</string>
    <string name="ah">Voice search</string>
    <string name="ai">Share with</string>
    <string name="aj">Share with %s</string>
    <string name="ak">Collapse</string>
    <string name="al">Preferred native ABI precedence of this device (%1$s) and ABI reported by native libraries (%2$s) mismatch</string>
    <string name="am">About</string>
    <string name="an">HTTP Custom %s &lt;br/&gt; easyPro &lt;br/&gt; https://fb.com/easypro.xyz</string>
    <string name="ao">change end date</string>
    <string name="ap">Clear/Reset Config</string>
    <string name="aq">Connect</string>
    <string name="ar">Disconnect</string>
    <string name="as">Exit</string>
    <string name="at">Free VPN</string>
    <string name="au">Generate</string>
    <string name="av">Open Config</string>
    <string name="aw">Cloud Config</string>
    <string name="ax">Save Config</string>
    <string name="ay">Proxy Socket Server</string>
    <string name="az">Direct Proxy</string>
    <string name="b0">Direct Proxy Started</string>
    <string name="b1">Direct Proxy Stopped</string>
    <string name="b2">V2ray Settings</string>
    <string name="b3">View Config VPN</string>
    <string name="b4">Group/Sort By</string>
    <string name="b5">Open OVPN</string>
    <string name="b6">Add</string>
    <string name="b7">Use the &lt;img src=\"ic_menu_add\"/&gt; icon to add a new VPN</string>
    <string name="b8">Add Package Name</string>
    <string name="b9">add Profile</string>
    <string name="b_">Enter a name identifying the new Profile</string>
    <string name="ba">Add new remote</string>
    <string name="bb">Server Address:</string>
    <string name="bc">Advanced</string>
    <string name="bd">Advanced Settings</string>
    <string name="be">An external app tries to control %s. The app requesting access cannot be determined. Allowing this app grants ALL apps access.</string>
    <string name="bf">Allow changes to VPN Profiles</string>
    <string name="bg">Allowed apps: %s</string>
    <string name="bh">Allowed VPN apps: %1$s</string>
    <string name="bi">0.19</string>
    <string name="bj">androidx.startup</string>
    <string name="bk">OpenVPN for Android</string>
    <string name="bl">HTTP Custom</string>
    <string name="bm">Psiphon Service</string>
    <string name="bn">SSH Service</string>
    <string name="bo">UDP Service</string>
    <string name="bp">V2ray Service</string>
    <string name="bq">VPN Service</string>
    <string name="br">Package %s is no longer installed, removing it from app allow/disallow list</string>
    <string name="bs">HTTP Custom ready to use</string>
    <string name="bt">HTTP Custom stopped</string>
    <string name="bu">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bv">Application behaviour</string>
    <string name="bw">AS servername</string>
    <string name="bx">Enter the authentication digest used for OpenVPN. Leave empty to use default digest.</string>
    <string name="by">Enter packet authentication method</string>
    <string name="bz">Invalid or Expired Account</string>
    <string name="c0">Behaviour on AUTH_FAILED</string>
    <string name="c1">ssh authenticate with HWID</string>
    <string name="c2">ssh authenticate with public key</string>
    <string name="c3">ssh authenticate with none</string>
    <string name="c4">ssh authenticate with password</string>
    <string name="c5">Password</string>
    <string name="c6">Username</string>
    <string name="c7">Connecting…</string>
    <string name="c8">Data Ping</string>
    <string name="c9">Auto Ping</string>
    <string name="c_">Auto Replace</string>
    <string name="ca">Average per hour</string>
    <string name="cb">Average per minute</string>
    <string name="cc">Backup DNS Server</string>
    <string name="cd">Basic</string>
    <string name="ce">In my personal tests the main reason for high battery consumption of OpenVPN are the keepalive packets. Most OpenVPN servers have a configuration directive like \'keepalive 10 60\' which causes the client and server to exchange keepalive packets every ten seconds. &lt;p&gt; While these packets are small and do not use much traffic, they keep the mobile radio network busy and increase the energy consumption. (See also &lt;a href=https://developer.android.com/training/efficient-downloads/efficient-network-access.html#RadioStateMachine&gt;The Radio State Machine | Android Developers&lt;/a&gt;) &lt;p&gt; This keepalive setting cannot be changed on the client. Only the system administrator of the OpenVPN can change the setting. &lt;p&gt; Unfortunately using a keepalive larger than 60 seconds with UDP can cause some NAT gateways to drop the connection due to an inactivity timeout. Using TCP with a long keep alive timeout works, but tunneling TCP over TCP performs extremely poorly on connections with high packet loss. (See &lt;a href=http://sites.inka.de/bigred/devel/tcp-tcp.html&gt;Why TCP Over TCP Is A Bad Idea&lt;/a&gt;)</string>
    <string name="cf">Battery consumption</string>
    <string name="cg">%.0f bit/s</string>
    <string name="ch">Networks directly connected to the local interfaces will not be routed over the VPN. Deselecting this option will redirect all traffic intented for local networks to the VPN.</string>
    <string name="ci">Bypass VPN for local networks</string>
    <string name="cj">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="ck">Collapse the bottom sheet</string>
    <string name="cl">Expand the bottom sheet</string>
    <string name="cm">Expand halfway</string>
    <string name="cn">Drag handle double-tapped</string>
    <string name="co">Drag handle</string>
    <string name="cp">Bouncy Castle Crypto APIs</string>
    <string name="cq">Got an exception trying to show the Android 4.0+ certificate selection dialog. This should never happen as this a standard feature of Android 4.0+. Maybe your Android ROM support for certificate storage is broken</string>
    <string name="cr">Error showing certificate selection</string>
    <string name="cs">Broken Images</string>
    <string name="g7">Detail Log</string>
    <string name="gv">Enable DNS</string>
    <string name="gw">SSL</string>
    <string name="je">About</string>
    <string name="ky">Keep VPNService</string>
    <string name="l_">Log Level:</string>
    <string name="lt">Select AM or PM</string>
    <string name="m7">AM</string>
    <string name="ma">PM</string>
    <string name="mx">Mobile IP Hunter</string>
    <string name="ox">Battery Optimization</string>
    <string name="oy">Connection</string>
    <string name="oz">DNS Custom</string>
    <string name="p0">HWID</string>
    <string name="p1">Simple Maker</string>
    <string name="p3">Payload</string>
    <string name="p4">ShortUrl Maker</string>
    <string name="p5">SSH Settings</string>
    <string name="p7">SNI</string>
    <string name="p8">Tool</string>
    <string name="p9">UDPGW SSH</string>
    <string name="p_">Utility</string>
    <string name="pa">VPN Settings</string>
    <string name="rm">Icon of app trying to use OpenVPN for Android</string>
    <string name="s1">user:pass</string>
    <string name="s3">Proxified Apps</string>
    <string name="ts">I trust this application.</string>
    <string name="tt">By proceeding, you are giving the application permission to completely control OpenVPN for Android and to intercept all network traffic.Do NOT accept unless you trust the application. Otherwise, you run the risk of having your data compromised by malicious software.</string>
    <string name="u0">Response checker</string>
    <string name="u7">Route (Root Only)</string>
    <string name="vs">Status connection:</string>
    <string name="w0">Timeout</string>
    <string name="w_">Show Status</string>
    <string name="xp">No process running</string>
    <string name="y3">ShareNet</string>
    <string name="y5">Tether/Hotspot (Root)</string>
    <string name="z9">Update Config</string>
    <string name="zj">Use Payload</string>
    <string name="a0i">WakeLock</string>
</resources>