<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/vh"
        android:orderInCategory="0"
        android:title="@string/y3"
        app:showAsAction="0x0">
        <menu>
            <item
                android:id="@+id/vi"
                android:orderInCategory="1"
                android:title="@string/y5"
                android:checkable="true"
                app:showAsAction="0x0"/>
            <item
                android:id="@+id/bj"
                android:orderInCategory="2"
                android:title="@string/ay"
                android:checkable="true"
                app:showAsAction="0x0"/>
            <item
                android:id="@+id/b_"
                android:orderInCategory="3"
                android:title="Enable Log (PSS)"
                android:checkable="true"
                app:showAsAction="0x0"/>
        </menu>
    </item>
    <item
        android:orderInCategory="1"
        android:title="SSH/VPN Settings"
        app:showAsAction="0x0">
        <menu>
            <item
                android:id="@+id/lb"
                android:orderInCategory="0"
                android:title="@string/ky"
                android:checkable="true"
                app:showAsAction="0x0"/>
            <item
                android:id="@+id/uj"
                android:orderInCategory="1"
                android:title="SSH Compress"
                android:checkable="true"
                app:showAsAction="0x0"/>
        </menu>
    </item>
    <item
        android:orderInCategory="2"
        android:title="Utility"
        app:showAsAction="0x0">
        <menu>
            <item
                android:id="@+id/ct"
                android:orderInCategory="0"
                android:title="@string/c8"
                android:checkable="true"
                app:showAsAction="0x0"/>
            <item
                android:id="@+id/cu"
                android:orderInCategory="1"
                android:title="@string/c9"
                android:checkable="true"
                app:showAsAction="0x0"/>
            <item
                android:id="@+id/cs"
                android:orderInCategory="2"
                android:title="Auto IP Hunter"
                android:checkable="true"
                app:showAsAction="0x0"/>
            <item
                android:id="@+id/bk"
                android:orderInCategory="3"
                android:title="@string/az"
                android:checkable="true"
                app:showAsAction="0x0"/>
            <item
                android:id="@+id/b9"
                android:orderInCategory="4"
                android:title="Enable Log (DP)"
                android:checkable="true"
                app:showAsAction="0x0"/>
            <item
                android:id="@+id/uk"
                android:orderInCategory="5"
                android:title="Force TLSv1.1"
                android:checkable="true"
                app:showAsAction="0x0"/>
            <item
                android:id="@+id/ul"
                android:orderInCategory="6"
                android:title="Force TLSv1.2"
                android:checkable="true"
                app:showAsAction="0x0"/>
            <item
                android:id="@+id/ym"
                android:orderInCategory="7"
                android:title="@string/a0i"
                android:checkable="true"
                app:showAsAction="0x0"/>
            <item
                android:id="@+id/f3"
                android:orderInCategory="8"
                android:title="@string/c_"
                android:checkable="true"
                app:showAsAction="0x0"/>
        </menu>
    </item>
    <item
        android:icon="@drawable/g4"
        android:id="@+id/ej"
        android:orderInCategory="3"
        android:title="@string/b3"
        app:showAsAction="0x1"/>
    <item
        android:icon="@drawable/fg"
        android:id="@+id/yl"
        android:orderInCategory="4"
        android:title="@string/at"
        app:showAsAction="0x1"/>
    <item
        android:icon="@drawable/et"
        android:id="@+id/ju"
        android:orderInCategory="5"
        android:title="@string/b4"
        app:showAsAction="0x1"/>
    <item
        android:id="@+id/bg"
        android:orderInCategory="6"
        android:title="@string/s3"
        app:showAsAction="0x0"/>
    <item
        android:id="@+id/b1"
        android:orderInCategory="20"
        android:title="@string/ap"
        app:showAsAction="0x0"/>
    <item
        android:icon="0x7f0801af"
        android:id="@+id/ek"
        android:orderInCategory="98"
        android:title="@string/z9"
        app:showAsAction="0x1"/>
    <item
        android:id="@+id/bf"
        android:orderInCategory="99"
        android:title="Destination Ping"
        app:showAsAction="0x0"/>
    <item
        android:id="@+id/bm"
        android:orderInCategory="99"
        android:title="@string/w0"
        app:showAsAction="0x0"/>
    <item
        android:id="@+id/b7"
        android:orderInCategory="100"
        android:title="@string/as"
        app:showAsAction="0x0"/>
</menu>
