<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/qg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/m_"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/w9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/s1"
                    android:maxLines="1"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">
                <CheckBox
                    android:id="@+id/y7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zj"
                    android:layout_weight="0.5"/>
                <CheckBox
                    android:id="@+id/s1"
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/u7"
                    android:layout_weight="0.5"/>
                <CheckBox
                    android:id="@+id/fb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gw"
                    android:layout_weight="0.5"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">
                <CheckBox
                    android:id="@+id/i4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gv"
                    android:layout_weight="0.5"/>
                <CheckBox
                    android:id="@+id/cv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/c_"
                    android:layout_weight="0.5"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">
                <CheckBox
                    android:id="@+id/cw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/g7"
                    android:layout_weight="0.5"/>
                <CheckBox
                    android:id="@+id/tn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/w_"
                    android:layout_weight="0.5"/>
            </LinearLayout>
            <Button
                android:textColor="@android:color/white"
                android:id="@+id/do_res_0x7f0900a2"
                android:background="@drawable/ih"
                android:longClickable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/aq"/>
            <TextView
                android:textAppearance="@style/kz"
                android:textSize="12sp"
                android:id="@+id/w7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/l_"
                android:textAllCaps="true"/>
            <SeekBar
                android:id="@+id/t8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="3"
                android:progress="0"
                style="@style/vd"/>
            <TextView
                android:textAppearance="@style/kz"
                android:textSize="12sp"
                android:id="@+id/x2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/vs"
                android:textAllCaps="true"/>
            <TextView
                android:textAppearance="@style/kz"
                android:textSize="12sp"
                android:id="@+id/te"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/xp"/>
            <RelativeLayout
                android:gravity="center"
                android:id="@+id/c0"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>
            <RelativeLayout
                android:id="@+id/dx"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/c1">
                <TextView
                    android:textAppearance="@style/kz"
                    android:textColorLink="@color/b_"
                    android:gravity="start"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:id="@+id/vx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2016 © ePro Dev. Team"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
