<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/g3"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:theme="@style/l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/x8"
            android:background="@drawable/ix"
            android:layout_width="match_parent"
            android:layout_height="?attr/f"
            app:popupTheme="@style/n"/>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/v4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="0"
            app:tabIndicatorColor="@color/b_"
            app:tabMaxWidth="0dp"
            app:tabMode="1"/>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/bu"/>
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/iw"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:layout_behavior="team.dev.epro.apkcustom.widgets.SnackBarBehavior"
        app:menu_animationDelayPerItem="0"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_colorNormal="@color/b_"
        app:menu_colorPressed="@color/bc"
        app:menu_labels_ellipsize="3"
        app:menu_labels_singleLine="true"
        app:menu_shadowColor="#ff444444">
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/iy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="0x7f0801b4"
            app:fab_colorNormal="@color/b_"
            app:fab_colorPressed="@color/bc"
            app:fab_label="@string/ax"
            app:fab_size="1"/>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/j0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="0x7f0801b3"
            app:fab_colorNormal="@color/b_"
            app:fab_colorPressed="@color/bc"
            app:fab_label="@string/b5"
            app:fab_size="1"/>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/ix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="0x7f0801b2"
            app:fab_colorNormal="@color/b_"
            app:fab_colorPressed="@color/bc"
            app:fab_label="@string/av"
            app:fab_size="1"/>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/iu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="0x7f0801af"
            app:fab_colorNormal="@color/b_"
            app:fab_colorPressed="@color/bc"
            app:fab_label="@string/aw"
            app:fab_size="1"/>
    </com.github.clans.fab.FloatingActionMenu>
    <com.github.clans.fab.FloatingActionButton
        android:layout_gravity="end|bottom"
        android:id="@+id/j3"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="0x7f0801e8"
        app:fab_colorNormal="@color/b_"
        app:fab_colorPressed="@color/bc"
        app:menu_shadowColor="#ff444444"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
